# bidirectional-polymorphism

./: BidirectionalPolymoprhism.cabal  README.md
app/: Main.hs
src/Core/: Context.hs  Expression.hs  Parser.hs
src/Core/Parser/: Lex.hs  Term.hs  Type.hs  Util.hs
src/Core/TypeChecker/: Judgement.hs
